# artefacta

./: .gitlab-ci.yml  Cargo.toml  README.adoc  README.md  shell.nix
.github/workflows/: ci.yml  release.yml
erreur/: Cargo.toml
erreur/src/: lib.rs
proptest-regressions/: packaging.txt
src/: apply_patch.rs  cli.rs  compression.rs  err.rs  git.rs  git_integration.rs  graph.rs  index.rs  lib.rs  main.rs  packaging.rs  partial_file.rs  paths.rs  storage.rs  test_helpers.rs  version.rs
src/index/: build.rs  checksum.rs  graph.rs  patch.rs  version.rs
src/storage/: entry.rs  local.rs  mod.rs  s3.rs
tests/: add.rs  cli.rs  create-patch.rs  full-workflow.rs  git.rs  init.rs  install.rs  roundtrip.rs  s3.rs  test_helpers.rs
