[package]
name = "artefacta"
version = "0.0.11"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
log = "0.4.8"
humansize = "1.1.0"
env_logger = "0.7.1"
erreur = { path = "erreur" }

structopt = "0.3.15"
pretty_env_logger = "0.4.0"

petgraph = "0.5.1"
smol_str = "0.1.15"

bidiff = "0.1.0"
bipatch = "0.1.1"
zstd = "0.5.3"

tar = "0.4.26"
walkdir = "2.3.1"
tempfile = "3.1.0"

url = "2.1.1"
rusoto_core = { version = "0.45.0", features = ["rustls"], default-features = false }
rusoto_s3 = { version = "0.45.0", features = ["rustls"], default-features = false }
base64 = "0.12.3"
md5 = "0.7.0"
async-read-progress = "0.1.0"

tokio = { version = "0.2", features = ["rt-threaded", "io-util"] }
futures = "0.3.4"

git2 = { version = "0.13.6", default-features = false }
chrono = "0.4.11"

[dev-dependencies]
rand = "0.7.3"
proptest = "0.10.0"
assert_cmd = "1.0.1"
assert_fs = "1.0.0"
predicates = "1.0.4"

[workspace]
members = [".", "erreur"]

# some of our tests are quite slow without optimizations
[profile.dev.package."*"]
opt-level = 3
