[package]
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "artefacta"
readme = "README.md"
version = "0.0.15"

[dependencies]
env_logger = "0.7.1"
erreur = {path = "erreur"}
humansize = "1.1.0"
log = "0.4.8"

pretty_env_logger = "0.4.0"
structopt = "0.3.15"

petgraph = "0.5.1"
smol_str = "0.1.15"

bidiff = "1.0"
bipatch = "1.0"
zstd = "0.9.0"

tar = "0.4.26"
tempfile = "3.1.0"
walkdir = "2.3.1"

async-read-progress = "0.2.0"
base64 = "0.13.0"
md5 = "0.7.0"
rusoto_core = {version = "0.46.0", features = ["rustls"], default-features = false}
rusoto_s3 = {version = "0.46.0", features = ["rustls"], default-features = false}
url = "2.1.1"

futures = "0.3.4"
tokio = {version = "1.6"}

chrono = "0.4.11"
git2 = {version = "0.13.6", default-features = false}
human-sort = "0.2.2"

[dev-dependencies]
assert_cmd = "1.0.1"
assert_fs = "1.0.0"
predicates = "1.0.4"
proptest = "1.0.0"
rand = "0.8.3"

[workspace]
members = [".", "erreur"]

# some of our tests are quite slow without optimizations
[profile.dev.package."*"]
opt-level = 3
