[package]
name = "artefacta"
version = "0.0.15"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.57.0"

[dependencies]
log = "0.4.8"
humansize = "1.1.0"
env_logger = "0.7.1"
erreur = { path = "erreur" }

structopt = "0.3.15"
pretty_env_logger = "0.4.0"

petgraph = "0.6.2"
smol_str = "0.1.15"

bidiff = "1.0"
bipatch = "1.0"
zstd = "0.11.2"

tar = ">=0.4.36"
walkdir = "2.3.1"
tempfile = "3.1.0"

url = "2.1.1"
rusoto_core = { version = "0.48.0", features = [
    "rustls",
], default-features = false }
rusoto_s3 = { version = "0.48.0", features = [
    "rustls",
], default-features = false }
base64 = "0.13.0"
md5 = "0.7.0"
async-read-progress = "0.2.0"

tokio = { version = "1.20.4", features = ["rt-multi-thread", "io-util"] }
futures = "0.3.4"

git2 = { version = "0.16.1", default-features = false }
chrono = "0.4.11"
human-sort = "0.2.2"

[dev-dependencies]
rand = "0.8.5"
proptest = "1.0.0"
assert_cmd = "2.0.1"
assert_fs = "1.0.0"
predicates = "2.1.1"

[workspace]
members = [".", "erreur"]

# some of our tests are quite slow without optimizations
[profile.dev.package."*"]
opt-level = 3
